# sakuinkun

./: .gitignore  CMakeLists.txt  CMakePresets.json  Install.cmake  LICENSE  Readme.md  vcpkg.json
app/src/: main.cpp
cli_app/: CMakeLists.txt
cli_app/src/: main.cpp
cli_app_cpp/: CMakeLists.txt
cli_app_cpp/src/: main.cpp
docs/: index.md
extlibs/: CMakeLists.txt
extlibs/xlsxwriter/: CMakeLists.txt
guiapp_csharp/: AboutForm.Designer.cs  AboutForm.cs  App.config  DispKeyWord.cs  KeyWordListForm.Designer.cs  KeyWordListForm.cs  KeyWordListForm.resx  LibSakuin.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  README.md  SakuinKun.csproj  SakuinKun.sln  WordEditForm.Designer.cs  WordEditForm.cs
guiapp_csharp/Properties/: Resources.Designer.cs  Settings.Designer.cs  launchSettings.json
guiapp_csharp/Properties/DataSources/: KeyWord.datasource
lib/: CMakeLists.txt
lib/include/: libsakuin.h  sakuin_def.h
lib/include/sakuinkun/: ReferenceType.h
lib/include/sakuinkunpp/: IndexDesc.hpp  IndexRecord.hpp  KeyWord.hpp  Reference.hpp  SakuinKun.hpp
lib/manifest/: libsakuin.manifest
lib/src/: IndexDesc.cpp  IndexRecord.cpp  KeyWord.cpp  Reference.cpp  SakuinKun.cpp  libsakuin.cpp  util.cpp  util.h
lib/src/json/: JsonRW.cpp  JsonRW.h
lib/src/mecab/: MeCabCtrl.cpp  MeCabCtrl.h
lib/src/nombre/: RomanConv.h
lib/src/system/: ConfigData.h  utf8_win.cpp
lib/src/xlsx/: XlsxExport.cpp  XlsxExport.h
lib/src/xml/: XmlImport.cpp  XmlImport.h
mecab_data/: CMakeLists.txt
mecab_data/rc/: mecabrc
